# ai-project-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.project.md  pyproject.toml
.github/: CODEOWNERS  labels.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: CollaborationLog.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  experiment.yml  feature_task.yml
.github/workflows/: ci.yml  notebook-check.yml
docs/: DESIGN_DECISIONS.md  TEMPLATE_GUIDE.md  pr-checklist.md
eval/: README.md
notebooks/: README.md
scripts/: apply-labels.sh  init_template.py  setup-github.sh
src/api/: main.py
src/app_core/: __init__.py
tests/api/: test_main.py
